[package]
name = "datatoolkits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
serde_yml = "0.0.4"
anyhow = "1.0.82"
rand = "0.8.5"
dashmap = "5.5.3"
walkdir = "2.5.0"
regex = "1.10.4"
serde_json = "1.0.115"
rustyline = "14.0.0"
sysinfo = "0.30.10"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
